<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/sorting_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp" >
        
        <TextView
            android:id="@+id/route_grade"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:text="@string/grade_abbrv"
            android:textColor="@color/header" />
        
        <TextView
            android:id="@+id/route_name"
            android:layout_width="96sp"
            android:layout_height="wrap_content"
            android:text="@string/route"
            android:textColor="@color/header"
            android:paddingRight="4sp" />
        
        <TextView
            android:id="@+id/ascents"
            android:layout_width="26sp"
            android:layout_height="wrap_content"
            android:text="@string/number_abbrv"
            android:textColor="@color/header" />
                   
        <TextView
            android:id="@+id/status"
            android:layout_width="34sp"
            android:layout_height="wrap_content"
            android:text="@string/best"
            android:textColor="@color/header"
            android:paddingRight="4sp" />
                   
        <TextView
            android:id="@+id/route_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textColor="@color/header" />
        
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/routes_list" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_baseline_add_24"
            android:contentDescription="@string/add_entry"
            android:layout_margin="16dp" />

    </FrameLayout>

</LinearLayout>
