<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/lgrade"
        android:layout_alignParentTop="true"
        android:text="@string/grade"
        android:layout_width="60sp"
        android:layout_height="26sp"
        android:textSize="16sp"
        android:gravity="bottom"
        android:textColor="@color/header" />

    <TextView
        android:id="@+id/grade"
        android:layout_toEndOf="@id/lgrade"
        android:layout_width="match_parent"
        android:layout_height="26sp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ltype"
        android:layout_below="@id/grade"
        android:text="@string/type"
        android:layout_width="60sp"
        android:layout_height="26sp"
        android:textSize="16sp"
        android:gravity="bottom"
        android:textColor="@color/header" />

    <TextView
        android:id="@+id/type"
        android:layout_toEndOf="@id/ltype"
        android:layout_below="@id/grade"
        android:layout_width="match_parent"
        android:layout_height="26sp"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/lsent"
        android:layout_below="@id/type"
        android:text="@string/list_of_sent"
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:textSize="16sp"
        android:gravity="bottom"
        android:textColor="@color/header" />

    <TextView
        android:id="@+id/header_status"
        android:layout_width="34sp"
        android:layout_height="wrap_content"
        android:text="@string/best"
        android:textColor="@color/header"
        android:paddingEnd="2sp"
        android:paddingStart="2sp"
        android:layout_below="@id/lsent"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/header_route"
        android:layout_width="146sp"
        android:layout_height="wrap_content"
        android:text="@string/route"
        android:textColor="@color/header"
        android:paddingEnd="4sp"
        android:paddingStart="4sp"
        android:layout_below="@id/lsent"
        android:layout_toEndOf="@id/header_status" />

    <TextView
        android:id="@+id/header_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:textColor="@color/header"
        android:paddingEnd="4sp"
        android:paddingStart="4sp"
        android:layout_below="@id/lsent"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/header_route" />

    <ListView
        android:id="@+id/completed"
        android:layout_below="@id/header_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true" />

</RelativeLayout>
