<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/label_grade"
        android:layout_alignParentTop="true"
        android:text="@string/grade"
        android:layout_width="60sp"
        android:layout_height="26sp"
        android:textSize="16sp"
        android:gravity="bottom"
        android:textColor="@color/header" />
    
    <TextView
        android:id="@+id/grade"
        android:layout_toEndOf="@id/label_grade"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="26sp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_notes"
        android:layout_below="@id/grade"
        android:text="@string/notes"
        android:layout_width="60sp"
        android:layout_height="26sp"
        android:textSize="16sp"
        android:gravity="bottom"
        android:textColor="@color/header" />
    
    <TextView
        android:id="@+id/notes"
        android:layout_toEndOf="@id/label_notes"
        android:layout_below="@id/grade"
        android:layout_width="match_parent"
        android:layout_height="26sp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_ascents"
        android:layout_below="@id/notes"
        android:text="@string/list_of_ascents"
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:textSize="16sp"
        android:gravity="bottom"
        android:textColor="@color/header" />
    
    <TextView
        android:id="@+id/header_date"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/header"
        android:layout_below="@id/label_ascents"
        android:layout_alignParentStart="true" />
    
    <TextView
        android:id="@+id/header_type"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@color/header"
        android:layout_below="@id/label_ascents"
        android:layout_toEndOf="@id/header_date" />
    
    <TextView
        android:id="@+id/header_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textColor="@color/header"
        android:layout_below="@id/label_ascents"
        android:layout_toEndOf="@id/header_type"
        android:layout_alignParentEnd="true" />
    

    <ListView
        android:id="@+id/ascents"
        android:layout_below="@id/header_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
