<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.climbingdiary.activities.MainActivity" >

    <LinearLayout
        android:id="@+id/sorting_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp" >
        
        <TextView
            android:id="@+id/header_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/place"
            android:textColor="#FFFF00" />
        
        <TextView
            android:id="@+id/header_routes"
            android:layout_width="46sp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/routes"
            android:textColor="#FFFF00" />
        
        <TextView
            android:id="@+id/header_visits"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/visits"
            android:textColor="#FFFF00" />
        
        </LinearLayout>
    
    <ListView
        android:id="@+id/list_places"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />
    
    <!-- Button
        android:id="@+id/add_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_place"
        android:onClick="addPlace" /> -->

</LinearLayout>
